finish login with social auth

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
-NEXT_APP_API_URL = http://localhost:8000/api/v1
+
+GOOGLE_CLIENT_ID = 8742662149-npjje0renp5gnpv1f4ivg540p15tv0k0.apps.googleusercontent.com
+GOOGLE_SECRET = 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
+
+GITHUB_ID = b4292c5b37bee3a4c533
+GITHUB_SECRET = a9e8d034e91b9a3e67cf3f4cba706ae87c50644f
+
+SECRET = Abdelbasset4real&
