--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.15",
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.1",
     "formik": "^2.4.5",
     "next": "^14.0.1",
     "next-auth": "^4.24.4",
+    "next-cloudinary": "^5.6.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
