--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.15",
+    "@mui/x-data-grid": "^6.18.1",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.1",
     "formik": "^2.4.5",
@@ -26,6 +27,7 @@
     "react-icons": "^4.11.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^8.1.3",
+    "timeago.js": "^4.0.2",
     "yup": "^1.3.2"
   },
   "devDependencies": {
