--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "react-icons": "^4.11.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^8.1.3",
+    "react-select": "^5.8.0",
+    "react-tag-input": "^6.8.1",
+    "recharts": "^2.10.1",
     "timeago.js": "^4.0.2",
     "yup": "^1.3.2"
   },
