--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.15",
     "@mui/x-data-grid": "^6.18.1",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.1",
     "formik": "^2.4.5",
